telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestCallPrivConstructorClass.java
package tests;

class A {

	public A(String s) {
		A a = new A();
	}
	
	private A(){};
	
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}


	void x(int y){
	}

	abstract void m2();
}
